--- a/FlameCsv.SourceGen.Tests/FlameCsv.SourceGen.Tests.csproj
+++ b/FlameCsv.SourceGen.Tests/FlameCsv.SourceGen.Tests.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
@@ -8,13 +9,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
-        <PackageReference Include="xunit" Version="2.8.1" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.8.1">
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0"/>
+        <PackageReference Include="xunit.v3" Version="1.1.0"/>
+        <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Condition="false" Include="coverlet.collector" Version="3.2.0">
+        <PackageReference Include="xunit.analyzers" Version="1.20.0">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+        </PackageReference>
+        <PackageReference Condition="false" Include="coverlet.collector" Version="6.0.4">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
@@ -27,8 +32,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\FlameCsv.Core\FlameCsv.Core.csproj" />
-        <ProjectReference Include="..\FlameCsv.SourceGen\FlameCsv.SourceGen.csproj" />
+        <ProjectReference Include="..\FlameCsv.Core\FlameCsv.Core.csproj"/>
+        <ProjectReference Include="..\FlameCsv.SourceGen\FlameCsv.SourceGen.csproj"/>
     </ItemGroup>
 
 
