test: add xunit runner to sourcegen tests

--- a/FlameCsv.SourceGen.Tests/FlameCsv.SourceGen.Tests.csproj
+++ b/FlameCsv.SourceGen.Tests/FlameCsv.SourceGen.Tests.csproj
@@ -36,5 +36,8 @@
         <ProjectReference Include="..\FlameCsv.SourceGen\FlameCsv.SourceGen.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest"/>
+    </ItemGroup>
 
 </Project>
