--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -1,143 +1,150 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <Version>0.1.0</Version>
-    <RootNamespace>FlameCsv</RootNamespace>
-    <IsTrimmable>true</IsTrimmable>
-    <IsAotCompatible>true</IsAotCompatible>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
+    <PropertyGroup>
+        <RootNamespace>FlameCsv</RootNamespace>
+        <IsTrimmable>true</IsTrimmable>
+        <IsAotCompatible>true</IsAotCompatible>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-  </PropertyGroup>
+    <PropertyGroup Condition="false">
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+        <CodeAnalysisTreatWarningsAsErrors>true</CodeAnalysisTreatWarningsAsErrors>
+        <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+        <AnalysisLevel>latest</AnalysisLevel>
+        <AnalysisMode>All</AnalysisMode>
+    </PropertyGroup>
 
-  <PropertyGroup Condition="false">
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <CodeAnalysisTreatWarningsAsErrors>true</CodeAnalysisTreatWarningsAsErrors>
-    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
-    <AnalysisLevel>latest</AnalysisLevel>
-    <AnalysisMode>All</AnalysisMode>
-  </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.4.0"/>
+        <PackageReference Include="FastExpressionCompiler" Version="5.0.2"/>
+        <PackageReference Include="System.IO.Pipelines" Version="9.0.2"/>
+        <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" PrivateAssets="all" ReferenceOutputAssembly="false"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.4.0" />
-    <PackageReference Include="FastExpressionCompiler" Version="5.0.2" />
-    <PackageReference Include="System.IO.Pipelines" Version="9.0.2" />
-    <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" PrivateAssets="all" ReferenceOutputAssembly="false" />
-  </ItemGroup>
+    <ItemGroup>
+        <None Update="Converters\NumberConverters.Generated.tt">
+            <Generator>TextTemplatingFileGenerator</Generator>
+            <LastGenOutput>NumberConverters.Generated.cs</LastGenOutput>
+        </None>
+        <None Update="Runtime\CsvReader.Generated.tt">
+            <Generator>TextTemplatingFileGenerator</Generator>
+            <LastGenOutput>CsvReader.Generated.cs</LastGenOutput>
+        </None>
+        <None Update="Runtime\Dematerializer.Generated.tt">
+            <Generator>TextTemplatingFileGenerator</Generator>
+            <LastGenOutput>Dematerializer.Generated.cs</LastGenOutput>
+        </None>
+        <None Update="Runtime\Materializer.Generated.tt">
+            <Generator>TextTemplatingFileGenerator</Generator>
+            <LastGenOutput>Materializer.Generated.cs</LastGenOutput>
+        </None>
+        <None Update="Reading\Internal\ISimdVector.Generated.tt">
+            <Generator>TextTemplatingFileGenerator</Generator>
+            <LastGenOutput>ISimdVector.Generated.cs</LastGenOutput>
+        </None>
+        <None Update="Writing\CsvWriter.Generated.cs.tt">
+            <Generator>TextTemplatingFileGenerator</Generator>
+            <LastGenOutput>CsvWriter.Generated.cs.cs</LastGenOutput>
+        </None>
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\FlameCsv.SourceGen\FlameCsv.SourceGen.csproj" ReferenceOutputAssembly="false" PackAsAnalyzer="true" />
-  </ItemGroup>
+    <ItemGroup>
+        <Compile Update="Converters\NumberConverters.Generated.cs">
+            <DesignTime>True</DesignTime>
+            <AutoGen>True</AutoGen>
+            <DependentUpon>NumberConverters.Generated.tt</DependentUpon>
+        </Compile>
+        <Compile Update="Runtime\CsvReader.Generated.cs">
+            <DesignTime>True</DesignTime>
+            <AutoGen>True</AutoGen>
+            <DependentUpon>CsvReader.Generated.tt</DependentUpon>
+        </Compile>
+        <Compile Update="Runtime\Dematerializer.Generated.cs">
+            <DesignTime>True</DesignTime>
+            <AutoGen>True</AutoGen>
+            <DependentUpon>Dematerializer.Generated.tt</DependentUpon>
+        </Compile>
+        <Compile Update="Runtime\Materializer.Generated.cs">
+            <AutoGen>True</AutoGen>
+            <DependentUpon>Materializer.Generated.tt</DependentUpon>
+            <DesignTime>True</DesignTime>
+        </Compile>
+        <Compile Update="Reading\Internal\ISimdVector.Generated.cs">
+            <AutoGen>True</AutoGen>
+            <DesignTime>True</DesignTime>
+            <DependentUpon>ISimdVector.Generated.tt</DependentUpon>
+        </Compile>
+        <Compile Update="CsvReader.Records.cs">
+            <DependentUpon>CsvReader.cs</DependentUpon>
+        </Compile>
+        <Compile Update="CsvReader.TypeMap.cs">
+            <DependentUpon>CsvReader.cs</DependentUpon>
+        </Compile>
+        <Compile Update="CsvReader.Value.cs">
+            <DependentUpon>CsvReader.cs</DependentUpon>
+        </Compile>
+        <Compile Update="CsvOptions.Converters.cs">
+            <DependentUpon>CsvOptions.cs</DependentUpon>
+        </Compile>
+        <Compile Update="CsvOptions.Dialect.cs">
+            <DependentUpon>CsvOptions.cs</DependentUpon>
+        </Compile>
+        <Compile Update="CsvOptions.Transcoding.cs">
+            <DependentUpon>CsvOptions.cs</DependentUpon>
+        </Compile>
+        <Compile Update="CsvWriter.Create.cs">
+            <DependentUpon>CsvWriter.cs</DependentUpon>
+        </Compile>
+        <Compile Update="Writing\CsvWriter.Generated.cs.cs">
+            <AutoGen>True</AutoGen>
+            <DesignTime>True</DesignTime>
+            <DependentUpon>CsvWriter.Generated.cs.tt</DependentUpon>
+        </Compile>
+        <Compile Update="CsvOptions.Aot.cs">
+            <DependentUpon>CsvOptions.cs</DependentUpon>
+        </Compile>
+        <Compile Update="CsvConverter`1.cs">
+            <DependentUpon>CsvConverter.cs</DependentUpon>
+        </Compile>
+        <Compile Update="CsvConverterFactory.cs">
+            <DependentUpon>CsvConverter.cs</DependentUpon>
+        </Compile>
+        <Compile Update="CsvParallel.ForEach.cs">
+            <DependentUpon>CsvParallel.cs</DependentUpon>
+        </Compile>
+    </ItemGroup>
 
-  <ItemGroup>
-    <None Update="Converters\NumberConverters.Generated.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>NumberConverters.Generated.cs</LastGenOutput>
-    </None>
-    <None Update="Runtime\CsvReader.Generated.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>CsvReader.Generated.cs</LastGenOutput>
-    </None>
-    <None Update="Runtime\Dematerializer.Generated.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Dematerializer.Generated.cs</LastGenOutput>
-    </None>
-    <None Update="Runtime\Materializer.Generated.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Materializer.Generated.cs</LastGenOutput>
-    </None>
-    <None Update="Reading\Internal\ISimdVector.Generated.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>ISimdVector.Generated.cs</LastGenOutput>
-    </None>
-    <None Update="Writing\CsvWriter.Generated.cs.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>CsvWriter.Generated.cs.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
+    <ItemGroup>
+        <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <Compile Update="Converters\NumberConverters.Generated.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>NumberConverters.Generated.tt</DependentUpon>
-    </Compile>
-    <Compile Update="Runtime\CsvReader.Generated.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>CsvReader.Generated.tt</DependentUpon>
-    </Compile>
-    <Compile Update="Runtime\Dematerializer.Generated.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Dematerializer.Generated.tt</DependentUpon>
-    </Compile>
-    <Compile Update="Runtime\Materializer.Generated.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Materializer.Generated.tt</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Update="Reading\Internal\ISimdVector.Generated.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ISimdVector.Generated.tt</DependentUpon>
-    </Compile>
-    <Compile Update="CsvReader.Records.cs">
-      <DependentUpon>CsvReader.cs</DependentUpon>
-    </Compile>
-    <Compile Update="CsvReader.TypeMap.cs">
-      <DependentUpon>CsvReader.cs</DependentUpon>
-    </Compile>
-    <Compile Update="CsvReader.Value.cs">
-      <DependentUpon>CsvReader.cs</DependentUpon>
-    </Compile>
-    <Compile Update="CsvOptions.Converters.cs">
-      <DependentUpon>CsvOptions.cs</DependentUpon>
-    </Compile>
-    <Compile Update="CsvOptions.Dialect.cs">
-      <DependentUpon>CsvOptions.cs</DependentUpon>
-    </Compile>
-    <Compile Update="CsvOptions.Transcoding.cs">
-      <DependentUpon>CsvOptions.cs</DependentUpon>
-    </Compile>
-    <Compile Update="CsvWriter.Create.cs">
-      <DependentUpon>CsvWriter.cs</DependentUpon>
-    </Compile>
-    <Compile Update="Writing\CsvWriter.Generated.cs.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>CsvWriter.Generated.cs.tt</DependentUpon>
-    </Compile>
-    <Compile Update="CsvOptions.Aot.cs">
-      <DependentUpon>CsvOptions.cs</DependentUpon>
-    </Compile>
-    <Compile Update="CsvConverter`1.cs">
-      <DependentUpon>CsvConverter.cs</DependentUpon>
-    </Compile>
-    <Compile Update="CsvConverterFactory.cs">
-      <DependentUpon>CsvConverter.cs</DependentUpon>
-    </Compile>
-    <Compile Update="CsvParallel.ForEach.cs">
-      <DependentUpon>CsvParallel.cs</DependentUpon>
-    </Compile>
-  </ItemGroup>
+    <!--Nuget-->
+    <PropertyGroup>
+        <PackageId>FlameCsv</PackageId>
+        <Description>FlameCsv is a blazing fast fully-featured CSV library.</Description>
+        <PackageProjectUrl>http://ovska.github.io/FlameCsv</PackageProjectUrl>
+        <PackageTags>csv, tsv, simd</PackageTags>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <PackageIcon>icon.png</PackageIcon>
+        <!--<PackageReadmeFile>README.md</PackageReadmeFile> TODO-->
 
-  <ItemGroup>
-    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
-  </ItemGroup>
+        <DebugSymbols>true</DebugSymbols>
+        <DebugType>portable</DebugType>
+        <EmbedAllSources>true</EmbedAllSources>
+    </PropertyGroup>
 
-  <!-- RIDER does a better job -->
-  <ItemGroup Condition="false">
-    <PackageReference Include="Roslynator.Analyzers" Version="4.12.4">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Roslynator.Formatting.Analyzers" Version="4.12.4">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\FlameCsv.SourceGen\FlameCsv.SourceGen.csproj"
+                          ReferenceOutputAssembly="false"
+                          OutputItemType="Analyzer"
+                          PrivateAssets="all"/>
+        <None Include="..\FlameCsv.SourceGen\bin\$(Configuration)\netstandard2.0\FlameCsv.SourceGen.dll"
+              Pack="true"
+              PackagePath="analyzers/dotnet/cs"
+              Visible="false"/>
+        <None Include="Properties/icon.png" Pack="true" PackagePath=""/>
+    </ItemGroup>
 
 </Project>
