--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -147,4 +147,16 @@
         <None Include="Properties/icon.png" Pack="true" PackagePath=""/>
     </ItemGroup>
 
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>FlameCsv.Tests, PublicKey=$(FlameCsvPublicKey)</_Parameter1>
+        </AssemblyAttribute>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>FlameCsv.Benchmark, PublicKey=$(FlameCsvPublicKey)</_Parameter1>
+        </AssemblyAttribute>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>FlameCsv.Console, PublicKey=$(FlameCsvPublicKey)</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
+
 </Project>
