perf: wip vectorized escaping

--- a/.editorconfig
+++ b/.editorconfig
@@ -177,10 +177,10 @@ dotnet_style_require_accessibility_modifiers = for_non_interface_members:silent
 dotnet_style_allow_multiple_blank_lines_experimental = true:silent
 dotnet_style_allow_statement_immediately_after_block_experimental = true:silent
 dotnet_code_quality_unused_parameters = all:suggestion
-dotnet_style_parentheses_in_arithmetic_binary_operators = always_for_clarity:silent
-dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:silent
-dotnet_style_parentheses_in_relational_binary_operators = always_for_clarity:silent
-dotnet_style_parentheses_in_other_operators = never_if_unnecessary:silent
+dotnet_style_parentheses_in_arithmetic_binary_operators = always_for_clarity:none
+dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:none
+dotnet_style_parentheses_in_relational_binary_operators = always_for_clarity:none
+dotnet_style_parentheses_in_other_operators = never_if_unnecessary:none
 dotnet_style_qualification_for_field = false:silent
 dotnet_style_qualification_for_property = false:silent
 dotnet_style_qualification_for_method = false:silent
@@ -197,6 +197,7 @@ resharper_virtual_member_never_overridden_global_highlighting=none
 resharper_class_with_virtual_members_never_inherited_global_highlighting=none
 
 dotnet_diagnostic.CS1591.severity = warning
+dotnet_diagnostic.IDE0047.severity = none # IDE0047: Remove unnecessary parentheses
 
 [*.Generated.*]
 end_of_line = crlf
