--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,8 +30,8 @@
         "type": "coreclr"
     },
     "dotnet.autoInsert.enableAutoInsert": true,
-    "dotnet.backgroundAnalysis.analyzerDiagnosticsScope": "fullSolution",
-    "dotnet.backgroundAnalysis.compilerDiagnosticsScope": "fullSolution",
+    "dotnet.backgroundAnalysis.analyzerDiagnosticsScope": "openFiles",
+    "dotnet.backgroundAnalysis.compilerDiagnosticsScope": "openFiles",
     "dotnet.completion.showCompletionItemsFromUnimportedNamespaces": true,
     "dotnet.quickInfo.showRemarksInQuickInfo": true,
     "dotnet.server.useServerGC": true,
