--- a/FlameCsv.Benchmark/FlameCsv.Benchmark.csproj
+++ b/FlameCsv.Benchmark/FlameCsv.Benchmark.csproj
@@ -27,7 +27,10 @@
     <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
     <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.14.0" />
     <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <PackageReference Include="RecordParser" Version="2.3.0" />
     <PackageReference Include="Sep" Version="0.8.0" />
+    <PackageReference Include="Sylvan.Data" Version="0.2.16" />
+    <PackageReference Include="Sylvan.Data.Csv" Version="1.4.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -41,12 +44,15 @@
 
   <ItemGroup>
     <None Include="C:\Users\Sipi\source\repos\FlameCsv\FlameCsv.Benchmark\.editorconfig" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="..\FlameCsv.Tests\TestData\SampleCSVFile_556kb.csv" CopyToOutputDirectory="PreserveNewest">
-      <Link>Data\SampleCSVFile_556kb.csv</Link>
-    </Content>
+    <None Update="Comparisons\Data\SampleCSVFile_556kb.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Comparisons\Data\65K_Records_Data.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Comparisons\Data\SampleCSVFile_10records.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
