--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -5,6 +5,7 @@
         <IsTrimmable>true</IsTrimmable>
         <IsAotCompatible>true</IsAotCompatible>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <DefineConstants>$(DefineConstants);LIGHT_EXPRESSION</DefineConstants>
     </PropertyGroup>
 
     <PropertyGroup Condition="false">
@@ -17,9 +18,9 @@
 
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.4.0"/>
-        <PackageReference Include="FastExpressionCompiler" Version="5.0.2"/>
         <PackageReference Include="System.IO.Pipelines" Version="9.0.2"/>
         <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" PrivateAssets="all" ReferenceOutputAssembly="false"/>
+        <PackageReference Include="FastExpressionCompiler.LightExpression.Internal.src" Version="5.0.2" PrivateAssets="All"/>
     </ItemGroup>
 
     <ItemGroup>
