feat: env variable configuration, move cache to CsvOptions

--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -102,6 +102,9 @@
         <Compile Update="CsvConverterFactory.cs">
             <DependentUpon>CsvConverter.cs</DependentUpon>
         </Compile>
+        <Compile Update="CsvOptions.Cache.cs">
+          <DependentUpon>CsvOptions.cs</DependentUpon>
+        </Compile>
     </ItemGroup>
 
     <ItemGroup>
