doc: add perf charts

--- a/docs/docs/toc.yml
+++ b/docs/docs/toc.yml
@@ -8,5 +8,7 @@
   href: attributes.md
 - name: Source Generator
   href: source-generator.md
+- name: Benchmarks
+  href: benchmarks.md
 - name: Architecture
   href: architecture.md
