refactor: use flags for enum options instead of bools

--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -105,6 +105,9 @@
         <Compile Update="CsvOptions.Cache.cs">
           <DependentUpon>CsvOptions.cs</DependentUpon>
         </Compile>
+        <Compile Update="CsvOptions.Obsolete.cs">
+          <DependentUpon>CsvOptions.cs</DependentUpon>
+        </Compile>
     </ItemGroup>
 
     <ItemGroup>
