test: rename enum test files to be more descriptive

--- a/FlameCsv.Tests/FlameCsv.Tests.csproj
+++ b/FlameCsv.Tests/FlameCsv.Tests.csproj
@@ -45,10 +45,10 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Compile Update="Converters\EnumCacheByteTests.cs">
+        <Compile Update="Converters\EnumReflectionByteTests.cs">
             <DependentUpon>EnumTests.cs</DependentUpon>
         </Compile>
-        <Compile Update="Converters\EnumCacheCharTests.cs">
+        <Compile Update="Converters\EnumReflectionCharTests.cs">
             <DependentUpon>EnumTests.cs</DependentUpon>
         </Compile>
         <Compile Update="Converters\EnumGeneratorByteTests.cs">
