test(fuzz): converters and unescaping

--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -160,6 +160,9 @@
         <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
             <_Parameter1>FlameCsv.Console, PublicKey=$(FlameCsvPublicKey)</_Parameter1>
         </AssemblyAttribute>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>FlameCsv.Fuzzing, PublicKey=$(FlameCsvPublicKey)</_Parameter1>
+        </AssemblyAttribute>
     </ItemGroup>
 
 </Project>
