--- a/FlameCsv.Fuzzing/.gitignore
+++ b/FlameCsv.Fuzzing/.gitignore
@@ -1,5 +1,6 @@
 ﻿# Ignore crash files in the current directory
 crash-*
+timeout-*
 
 # Ignore all files in Testcases directory except .csv files
 Testcases/*
