--- a/FlameCsv.Benchmark/FlameCsv.Benchmark.csproj
+++ b/FlameCsv.Benchmark/FlameCsv.Benchmark.csproj
@@ -18,16 +18,14 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TieredCompilation>false</TieredCompilation>
-    <TieredPGO>true</TieredPGO>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <ServerGarbageCollection>true</ServerGarbageCollection>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
     <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.14.0" />
     <PackageReference Include="CsvHelper" Version="33.0.1" />
-    <PackageReference Include="RecordParser" Version="2.3.0" />
     <PackageReference Include="Sep" Version="0.9.0" />
     <PackageReference Include="Sylvan.Data" Version="0.2.16" />
     <PackageReference Include="Sylvan.Data.Csv" Version="1.4.1" />
@@ -50,7 +48,10 @@
     <None Update="Comparisons\Data\65K_Records_Data.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Comparisons\Data\SampleCSVFile_10records.csv">
+    <None Update="Comparisons\Data\SampleCSVFile_100records.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Comparisons\Data\SampleCSVFile_556kb_4x.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
