--- a/FlameCsv.Fuzzing/FlameCsv.Fuzzing.csproj
+++ b/FlameCsv.Fuzzing/FlameCsv.Fuzzing.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
         <PackageReference Include="SharpFuzz" Version="2.2.0"/>
     </ItemGroup>
 
