--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,29 +9,40 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
-    
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        include:
+          # Add ARM64 explicitly for Ubuntu
+          - os: ubuntu-latest
+            arch: arm64
+          # Note: macos-latest might already run on ARM64 (Apple Silicon)
+          # If specific macOS ARM64 runners are needed and available, add them here.
+    # Use the matrix os and arch (arch defaults if not specified in include)
+    runs-on: ${{ matrix.arch == 'arm64' && fromJSON('["ubuntu-latest-arm64"]') || matrix.os }}
+
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
-      
+      uses: actions/checkout@v4
+
     - name: Setup .NET
-      uses: actions/setup-dotnet@v3
+      uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 9.x
-        
+
     - name: Restore dependencies
       run: dotnet restore
-      
+
     - name: Build solution
       run: dotnet build --configuration Release --no-restore
-      
+
     - name: Run tests
       run: dotnet test --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage"
-      
+
     - name: Upload coverage reports
       uses: actions/upload-artifact@v4
       with:
-        name: coverage-results
+        # Make artifact name unique per job
+        name: coverage-results-${{ matrix.os }}-${{ matrix.arch || 'x64' }}
         path: "**/TestResults/**/coverage.cobertura.xml"
         if-no-files-found: ignore
