dev: exclude files from vscode explorer and file watcher

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
         "files.insertFinalNewline": true,
         "editor.insertSpaces": true,
         "editor.tabSize": 4,
-        "editor.formatOnSave": false,
+        "editor.formatOnSave": false, // causes annoying cursor jumping when saving
         "editor.bracketPairColorization.enabled": true,
         "files.trimTrailingWhitespace": false,
         "editor.trimAutoWhitespace": false,
@@ -35,4 +35,34 @@
     "dotnet.completion.showCompletionItemsFromUnimportedNamespaces": true,
     "dotnet.quickInfo.showRemarksInQuickInfo": true,
     "dotnet.server.useServerGC": true,
+    "files.watcherExclude": {
+        "**/.git/objects/**": true,
+        "**/.git/subtree-cache/**": true,
+        "**/.hg/store/**": true,
+        "**/node_modules/**": true,
+        "**/bin/**": true,
+        "**/obj/**": true,
+        "**/BenchmarkDotNet.Artifacts/**": true,
+        ".vs": true,
+        ".idea": true,
+        "FlameCsv.Fuzzing/Testcases/**": true,
+    },
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
+        "**/bin/**": true,
+        "**/obj/**": true,
+        ".vs": true,
+        ".idea": true,
+        "ExternalAnnotations": true,
+        "FlameCsv.sln.DotSettings": true,
+        "FlameCsv.sln.DotSettings.user": true,
+    },
+    "csharp.debug.justMyCode": true,
+    "dotnet.enableXamlTools": true,
+    "dotnet.preferVisualStudioCodeFileSystemWatcher": true,
+    "dotnet.preview.enableSupportForSlnx": true,
 }
