dev: proper eol on generated files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+    "[**/*.Generated.*]": {
+        "files.eol": "\r\n"
+    },
     "[csharp]": {
         "files.eol": "\n",
         "files.insertFinalNewline": true,
