--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,6 +9,6 @@
         "github.vscode-github-actions",
     ],
     "unwantedRecommendations": [
-        "csharpier.csharpier-vscode",
+        // "csharpier.csharpier-vscode",
     ]
 }
