dev(vscode): use csharpier formatter

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,13 +2,11 @@
     "recommendations": [
         "ms-dotnettools.csharp",
         "ms-dotnettools.csdevkit",
+        "csharpier.csharpier-vscode",
         "redhat.vscode-xml",
         "redhat.vscode-yaml",
         "zbecknell.t4-support",
         "mechatroner.rainbow-csv",
         "github.vscode-github-actions",
     ],
-    "unwantedRecommendations": [
-        // "csharpier.csharpier-vscode",
-    ]
 }
