--- a/FlameCsv.Benchmark/.editorconfig
+++ b/FlameCsv.Benchmark/.editorconfig
@@ -1,9 +1,11 @@
 [*.cs]
-dotnet_diagnostic.IDE0090.severity = silent
-dotnet_diagnostic.IDE0055.severity = silent
-dotnet_diagnostic.IDE0044.severity = silent
-dotnet_diagnostic.IDE0005.severity = silent
 dotnet_analyzer_diagnostic.category-Style.severity = silent
 dotnet_analyzer_diagnostic.category-Performance.severity = silent
+
+dotnet_diagnostic.IDE0090.severity = silent # IDE0090: Use 'new(...)'
+dotnet_diagnostic.IDE0055.severity = silent # IDE0055: Fix formatting
+dotnet_diagnostic.IDE0044.severity = silent # IDE0044: Add readonly modifier
+dotnet_diagnostic.IDE0005.severity = silent # IDE0005: Using directive is unnecessary
+
 csharp_style_implicit_object_creation_when_type_is_apparent = false
 dotnet_style_prefer_collection_expression = false
