--- a/FlameCsv.Tests/.editorconfig
+++ b/FlameCsv.Tests/.editorconfig
@@ -1,13 +1,10 @@
 [*.cs]
 dotnet_analyzer_diagnostic.category-Style.severity = none
 
-# IDE0090: Use 'new(...)'
-dotnet_diagnostic.IDE0090.severity = silent
+dotnet_diagnostic.IDE0090.severity = silent # IDE0090: Use 'new(...)'
 csharp_style_implicit_object_creation_when_type_is_apparent = false
-
-# IDE0302: Simplify collection initialization
 dotnet_style_prefer_collection_expression = false
-dotnet_diagnostic.CA2007.severity = none
+dotnet_diagnostic.CA2007.severity = none # CA2007: Consider calling ConfigureAwait on the awaited task
 
 resharper_property_can_be_made_init_only_local_highlighting=none
 resharper_class_never_instantiated_global_highlighting=none
