--- a/FlameCsv.SourceGen/FlameCsv.SourceGen.csproj
+++ b/FlameCsv.SourceGen/FlameCsv.SourceGen.csproj
@@ -11,11 +11,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0"
+      PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0" PrivateAssets="all" />
   </ItemGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition="'$(IncludeInternalsVisibleTo)' == 'true'">
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
       <_Parameter1>FlameCsv.SourceGen.Tests, PublicKey=$(FlameCsvPublicKey)</_Parameter1>
     </AssemblyAttribute>
