--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -7,6 +7,8 @@
         <Nullable>enable</Nullable>
 
         <DefineConstants>$(DefineConstants);SOURCEGEN_USE_COMPILATION</DefineConstants>
+        
+        <IncludeInternalsVisibleTo Condition="'$(IncludeInternalsVisibleTo)' == ''">true</IncludeInternalsVisibleTo>
 
         <SignAssembly>true</SignAssembly>
         <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)FlameCsv.snk</AssemblyOriginatorKeyFile>
