chore: fix casing FlameCSV -> FlameCsv across the repo

--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -119,14 +119,14 @@
     <PropertyGroup>
         <Authors>ovska</Authors>
         <PackageId>FlameCsv</PackageId>
-        <Description>FlameCsv is a blazing fast fully-featured CSV library.</Description>
+        <Description>FlameCsv is the world's fastest .NET CSV library, with a deep API and AOT support.</Description>
         <PackageProjectUrl>http://ovska.github.io/FlameCsv</PackageProjectUrl>
         <PackageTags>performance, csv, tsv, simd, csv-parser, csv-reader, csv-writer</PackageTags>
         <Copyright>Copyright (c) Sipi Ovaska 2022-$([System.DateTime]::Now.Year)</Copyright>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <PackageIcon>icon.png</PackageIcon>
-        <RepositoryUrl>https://github.com/ovska/FlameCSV</RepositoryUrl>
+        <RepositoryUrl>https://github.com/ovska/FlameCsv</RepositoryUrl>
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <DebugSymbols>true</DebugSymbols>
