dev: custom material icons

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,4 +77,34 @@
     "dotnet.enableXamlTools": true,
     "dotnet.preferVisualStudioCodeFileSystemWatcher": true,
     "dotnet.preview.enableSupportForSlnx": true,
+    "material-icon-theme.folders.associations": {
+        "Core": "Mojo",
+        "SourceGen": "Plugin",
+        "Unit": "Test",
+        "Fuzz": "Queue",
+        "Fuzzing": "Queue",
+        "Attributes": "Decorators",
+        "Exceptions": "Error",
+        "Properties": "Config",
+        "IO": "Shader",
+        "TestData": "Database",
+        "Writing": "Custom",
+        "Reading": "Class",
+        "Readers": "Class",
+        "Comparisons": "Constant",
+        "BenchmarkDotNet.Artifacts": "Attachment",
+        "Reflection": "Trigger",
+        "Runtime": "Config",
+        "Enumeration": "CI",
+        "Binding": "Resolver",
+        "Converters": "Middleware",
+        "Testcases": "Interface",
+        "Scenarios": "Queue",
+        "Dictionaries": "Stack",
+    },
+    "material-icon-theme.files.associations": {
+        "*.Generated.cs": "Cobol", // same color as C# and "close enough", but still different
+        "*.tt": "Log",
+        "*.snk": "Lock",
+    }
 }
