--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -1,16 +1,41 @@
 <Project>
     <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)..\'))"/>
 
+    <ItemGroup>
+        <Using Include="Xunit"/>
+    </ItemGroup>
+
     <PropertyGroup>
-        <NoWarn>$(NoWarn);CA2263;CS1591</NoWarn>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <NoWarn>$(NoWarn);CA2263;CS1591;CA1861;CA1816;CA1067;IDE0018</NoWarn>
+    </PropertyGroup>
+
+    <PropertyGroup Condition="'$(MSBuildProjectName)' != 'FlameCsv.Tests.Lib'">
+        <OutputType>Exe</OutputType>
+        <IsPackable>false</IsPackable>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="JetBrains.Annotations" Version="2024.3.0"/>
     </ItemGroup>
 
-    <ItemGroup>
-        <Using Include="Xunit"/>
+    <ItemGroup Condition="'$(MSBuildProjectName)' != 'FlameCsv.Tests.Lib'">
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0"/>
+        <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" Version="17.14.2"/>
+        <PackageReference Include="xunit.v3" Version="2.0.2"/>
+        <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="xunit.analyzers" Version="1.21.0">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+        </PackageReference>
+        <PackageReference Condition="false" Include="coverlet.collector" Version="6.0.4">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
     </ItemGroup>
 </Project>
